# cppfits

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_test_files.py  main.cpp
.github/workflows/: ci.yml
include/fits/: bintablehdu.h  constants.h  exceptions.h  file.h  hdu.h  header.h  imagehdu.h  imagetype.h  string_utils.h  utils.h
src/: bintablehdu.cpp  file.cpp  hdu.cpp  header.cpp  imagehdu.cpp
tests/: CMakeLists.txt  test_file.cpp  test_header.cpp  test_string_utils.cpp  tests.cpp
